--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textViewWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="Welcome, UserFirstName!"
-        android:layout_centerInParent="true" />
+        android:text="Welcome, User!"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp" />
 
     <Button
-        android:id="@+id/btnLogout"
+        android:id="@+id/logoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Logout"
-        android:layout_centerVertical="true"/>
+        android:layout_below="@+id/textViewWelcome"
+        android:layout_marginTop="16dp" />
 
     <Button
-        android:id="@+id/btnUpdateProfile"
+        android:id="@+id/updateProfileButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Update Profile"
-        android:layout_below="@+id/btnLogout"
-        android:layout_marginTop="16dp"/>
+        android:layout_below="@+id/logoutButton"
+        android:layout_marginTop="16dp" />
+
 </RelativeLayout>
