log in and register page implemented

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,37 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
-
-    <EditText
-        android:id="@+id/editTextFirstName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="First Name" />
-
-    <EditText
-        android:id="@+id/editTextLastName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextFirstName"
-        android:layout_marginTop="8dp"
-        android:hint="Last Name" />
+    android:padding="16dp"
+    tools:context=".EditProfileActivity">
 
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextLastName"
-        android:layout_marginTop="8dp"
-        android:hint="Email Address"
-        android:inputType="textEmailAddress" />
+        android:hint="Email"
+        android:layout_marginTop="16dp"/>
 
-    <Button
-        android:id="@+id/btnUpdateProfile"
+    <EditText
+        android:id="@+id/editTextFirstName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="First Name"
         android:layout_below="@+id/editTextEmail"
-        android:layout_marginTop="16dp"
-        android:text="Update Profile" />
+        android:layout_marginTop="8dp"/>
+
+    <EditText
+        android:id="@+id/editTextLastName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Last Name"
+        android:layout_below="@+id/editTextFirstName"
+        android:layout_marginTop="8dp"/>
+
+    <EditText
+        android:id="@+id/editTextNIC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="NIC"
+        android:layout_below="@+id/editTextLastName"
+        android:layout_marginTop="8dp"/>
+
+    <EditText
+        android:id="@+id/editTextMobile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Mobile Number"
+        android:layout_below="@+id/editTextNIC"
+        android:layout_marginTop="8dp"/>
+
+    <Button
+        android:id="@+id/updateProfileButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update Profile"
+        android:layout_below="@+id/editTextMobile"
+        android:layout_marginTop="16dp"/>
+
 </RelativeLayout>
