--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -54,4 +54,12 @@
         android:layout_below="@+id/editTextMobile"
         android:layout_marginTop="16dp"/>
 
+    <Button
+        android:id="@+id/deactivate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Deactivate Profile"
+        android:layout_below="@+id/updateProfileButton"
+        android:layout_marginTop="16dp"/>
+
 </RelativeLayout>
