--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,12 +7,33 @@
     android:padding="16dp"
     tools:context=".EditProfileActivity">
 
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update Me"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        />
+
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="254dp"
+        android:layout_height="236dp"
+        android:layout_below="@+id/titleTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+        android:src="@drawable/register" />
+
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
-        android:layout_marginTop="16dp"/>
+        android:layout_below="@+id/logoImageView"
+        android:hint="Email" />
 
     <EditText
         android:id="@+id/editTextFirstName"
