--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -8,7 +8,6 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_below="@+id/logoIcon"
         android:id="@+id/userIcon"
         android:layout_width="47dp"
         android:layout_height="64dp"
@@ -20,7 +19,7 @@
         android:id="@+id/textViewWelcome"
         android:layout_width="156dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/logoIcon"
+        android:layout_below="@+id/userIcon"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
