--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Travel with Us"
+            android:text="Rail Easy"
             android:textSize="35sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
